[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Themes/gui_theme_medium.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/GUI/Options_Menu/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TestWorld.tscn" type="PackedScene" id=3]
[ext_resource path="res://pause_menu_gui.gd" type="Script" id=4]
[ext_resource path="res://Resources/Themes/gui_theme_large.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/GUI/QuitToDesktopButton.tscn" type="PackedScene" id=6]

[node name="PauseMenuGUIOLD" type="Panel"]
visible = false
modulate = Color( 1, 1, 1, 0.921569 )
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = ExtResource( 3 )
first_button_to_focus_node_path = NodePath("ButtonsContainer/ResumeButton")

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_top = 38.0
margin_right = 640.0
margin_bottom = 76.0
theme = ExtResource( 5 )
text = "PAUSE_MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -316.0
margin_top = -198.0
margin_right = 316.0
margin_bottom = 198.0
theme = ExtResource( 1 )
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="ButtonsContainer"]
margin_top = 54.0
margin_right = 632.0
margin_bottom = 81.0
text = "RESUME"

[node name="OptionsButton" type="Button" parent="ButtonsContainer"]
margin_top = 141.0
margin_right = 632.0
margin_bottom = 168.0
text = "OPTIONS"

[node name="QuitToMainMenuButton" type="Button" parent="ButtonsContainer"]
margin_top = 228.0
margin_right = 632.0
margin_bottom = 255.0
text = "QUIT_TO_MAIN_MENU"

[node name="QuitToDesktopButton" parent="ButtonsContainer" instance=ExtResource( 6 )]
margin_top = 315.0
margin_right = 632.0
margin_bottom = 342.0

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenuGUI_visibility_changed"]
[connection signal="pressed" from="ButtonsContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitToMainMenuButton" to="." method="_on_QuitToMainMenuButton_pressed"]
[connection signal="visibility_changed" from="OptionsMenu" to="." method="_on_OptionsMenu_visibility_changed"]
